[package]
name = "ds"
version = "0.1.0"
edition = "2021"
description = "Display the sizes of files and directories using horizontal bar charts"
keywords = ["barchart", "bar chart", "bargraph", "bar graph", "diskspace", "disk space", "diskusage", "disk usage", "disksize", "disk size", "filesize", "file size", "filesystem", "file system"]
categories = ["filesystem"]
license = "MIT"
repository = "https://github.com/EricFrancis12/ds"
homepage = "https://github.com/EricFrancis12/ds"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.16.0"
crossterm = "0.29.0"
globset = "0.4.16"
indicatif = "0.18.0"
regex = "1.11.1"
